@@ -61,6 +61,6 @@ data:extend({
       },
     },
     vehicle_impact_sound = sounds.generic_impact,
-    production = "250kW",
+    production = "2500kW",
   },
 })
