@@ -12,6 +12,8 @@ Date: 2025-04-04
     - Pressure tube now also requires seal
     - Updated gun turret recipe
   Balancing:
+    - Increased fuel values by 5
+    - Increased energy production by 5 or more of all power generation buildings
     - Magazines and shotgun shells do now much more damage
     - Weapon damage and shooting speed technologies have many more tiers and provide stronger bonuses
     - I intend to add more military balancing in the future (for now firearms are op compared to anything else)
